k8s-example/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensign-client
  namespace: opensign
  labels:
    app.kubernetes.io/name: opensign-client
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      name: http
  selector:
    app.kubernetes.io/name: opensign-client
