k8s-example/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensign-mongo
  namespace: opensign
  labels:
    app.kubernetes.io/name: opensign-mongo
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: mongodb
      name: mongodb
  selector:
    app.kubernetes.io/name: opensign-mongo
