k8s-example/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensign-server
  namespace: opensign
  labels:
    app.kubernetes.io/name: opensign-server
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      name: http
  selector:
    app.kubernetes.io/name: opensign-server
